# alphavantage

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: stocks.rs
src/: api.rs  blocking.rs  client.rs  deserialize.rs  error.rs  exchange_rate.rs  lib.rs  tickers.rs  time_series.rs
src/cache_enabled/: client.rs  exchange_rate.rs  mod.rs  tickers.rs  time_series.rs
tests/json/: currency_exchange_rate.json  ticker_search_tencent.json  ticker_search_tesco.json  time_series_daily.json  time_series_daily_adjusted.json  time_series_intraday_1min.json  time_series_monthly.json  time_series_monthly_adjusted.json  time_series_weekly.json  time_series_weekly_adjusted.json
