[package]
name = "alphavantage"
version = "0.6.0"
description = "Alpha Vantage API client"
authors = ["António Marques <me@antoniomarques.eu>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/asmarques/alphavantage"
readme = "README.md"
keywords = ["finance", "stocks", "alpha", "vantage"]
categories = ["api-bindings", "web-programming::http-client"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default_features = false }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.4"
derive_more = "0.99"

[features]
default = ["reqwest/native-tls"]
blocking = ["reqwest/blocking"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
structopt = "0.2"
tokio = { version = "1.2.0", features = ["macros"] }
